@@ -1,3 +1,9 @@
+2002-10-09  Marko Mlinar  <markom@opencores.org>
+
+	* infrun.c (resume): Convert #ifdef HAVE_NONSTEPPABLE_WATCHPOINT into C.
+	* gdbarch.sh (HAVE_NONSTEPPABLE_WATCHPOINT): Add.
+	* gdbarch.h, gdbarch.c: Re-generate.
+
 2002-10-08  Petr Sorfa <petrs@caldera.com>
 
 	Revised and re-submitted by John Wolfe <jlw@caldera.com>
